[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-student-engagement"
version = "0.1.0"
description = "Student Engagement Environment for OpenEnv"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.28.0",
    "pydantic>=2.6.4",
    "openai>=1.14.2",
    "openenv-core>=0.2.0",
    "openenv>=0.1.13"
]

[project.scripts]
server = "app:main"

[tool.setuptools]
packages = ["env"]
